# Mania-Replay-Master

./: .gitignore  ManiaReplayMaster.bat  README.md  README_CN.md  README_EN.md
src/cpp/: CMakeLists.txt  make.bat  me_replaymaster_ReplayMaster.h  render.cpp
src/java/me/replaymaster/: Encoder.kt  Errors.kt  Main.kt  Monitor.kt  OsuConverter.kt  Render.kt  ReplayMaster.kt  UpdateHelper.kt  Utf8Control.java  Utils.kt
src/java/me/replaymaster/beatmap/: IMapReader.kt  MalodyMapModels.kt  MalodyMapReader.kt  OsuMapReader.kt
src/java/me/replaymaster/judger/: BaseJudger.kt  MalodyJudger.kt  OsuJudger.kt  OsuManiaJudger.kt  OsuTaikoJudger.kt
src/java/me/replaymaster/model/: BeatMap.kt  Config.kt  Note.kt  ReplayModel.kt
src/java/res/: language.properties  language_zh_CN.properties
src/python/: judgementStatistics.py
src/test/: OsuManiaJudgementTest.kt
test/: - ck - Carnation (ck remix) [LN Master] (2021-12-06) OsuMania.osr  20220812-110445-Sewing.mr  20220812-110445-Sewing.osu  Doin - Pine nut (Night Bunny 7) [ATTang's Lv.27].osu  Kuiiiiteeee - Sound Horizon - Raijin no Hidariude [Tempest w _underjoy] (2018-09-23) OsuMania.osr  Kuit - Doin - Pine nut [ATTang's Lv.27] (2020-10-03) OsuMania.osr  Kuit - Various Artists - 4K LN Dan Courses v2 - Extra Level - [12th Dan - Yuugure (Marathon)] (2022-01-08) OsuMania.osr  Sound Horizon - Raijin no Hidariude (-Kamikaze-) [Tempest w _underjoy].osu  Various Artists - 4K LN Dan Courses v2 - Extra Level - (_underjoy) [12th Dan - Yuugure (Marathon)].osu  ck - Carnation (ck remix) (Gekido-) [LN Master].osu
(+3 files in other folders)
